--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
+    "vercel": "^33.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
